test/files/neg/t8012.scala
package p {
  class C[A]

  object `package` extends C[_]
}
